# gameover2025

./: .gitignore  Cargo.toml  README.md  config.toml
src/: lib.rs  main.rs
src/config/: config_load.rs  config_types.rs  mod.rs
src/effects/: mod.rs
src/models/: board.rs  mod.rs  piece.rs  wall_kick.rs
src/post/: mod.rs  post_processing.rs
src/shaders/: blur.wgsl  brightness.wgsl  composite.wgsl
src/utils/: timer.rs
src/views/: background.rs  board_instance.rs  mod.rs  piece_instance.rs
