[package]
name = "gameover2025"
authors = ["13th Eye <jjhh@13theye.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
nannou = "0.19"
nannou_osc = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
nnpipe = { git = "https://github.com/13theye/nnpipe", branch = "main" }

[lib]
name = "gameover2025"
path = "src/lib.rs"

[[bin]]
name = "gameover2025"
path = "src/main.rs"